Bug 253505 - REGRESSION(259134@main): Page load time regression (macOS, RemoteAudioDestinationProxy)
Summary: REGRESSION(259134@main): Page load time regression (macOS, RemoteAudioDestina...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kimmo Kinnunen
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-07 03:54 PST by Kimmo Kinnunen
Modified: 2023-03-07 22:33 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kimmo Kinnunen 2023-03-07 03:54:18 PST
REGRESSION(259134@main): Introduced page load time regression (macOS, RemoteAudioDestinationProxy)
Comment 1 Kimmo Kinnunen 2023-03-07 03:54:46 PST
<rdar://104617724>
Comment 2 Kimmo Kinnunen 2023-03-07 04:07:16 PST
Pull request: https://github.com/WebKit/WebKit/pull/11170
Comment 3 EWS 2023-03-07 22:32:39 PST
Committed 261361@main (562deb67127b): <https://commits.webkit.org/261361@main>

Reviewed commits have been landed. Closing PR #11170 and removing active labels.