REGRESSION(259134@main): Page load time regression (macOS, RemoteAudioDestinationProxy) https://bugs.webkit.org/show_bug.cgi?id=253505 rdar://104617724

Reviewed by Youenn Fablet.

During page load testing, a page would open an AudioSession and
navigate away. This would trigger a stopRendering() for the default
audio destination even when startRendering() would not be called.

259134@main would optimize this on iOS: not starting up an unneeded
connection to the GPU process just to create, start and stop and destroy
the audio destination. This was an obvious progression.

This is an unobvious macOS page load test regression, where one subsequent
page in the test would regress slightly due to this. For the duration of
more investigation, enable the previous code path on macOS.

* Source/WebKit/WebProcess/GPU/media/RemoteAudioDestinationProxy.cpp:
(WebKit::RemoteAudioDestinationProxy::stopRendering):
(WebKit::RemoteAudioDestinationProxy::renderAudio): Deleted.
(WebKit::RemoteAudioDestinationProxy::gpuProcessConnectionDidClose): Deleted.

Canonical link: https://commits.webkit.org/261361@main